tests/snapshot/error/runtime/string/repeat_string_too_large.js
("a".repeat(2 ** 16)).repeat((2 ** 31));